--- a/wp-content/themes/chemond/css/src/style.scss
+++ b/wp-content/themes/chemond/css/src/style.scss
@@ -1,13 +1,114 @@
-@import "_mixins";
 @import "_webfonts";
 @import "_normalize";
+@import "_mixins";
+
+$fnt_edward: "Edwardian Script ITC", sans-serif;
+$fnt_swiss: "Swis721 BT", sans-serif;
+$fnt_calibri: "Calibri", sans-serif;
+
+* {
+  line-height: 1em;
+}
 
 html {
   font-size: 62.5%;
 }
 
-.teste {
-  @include font-size(2.0);
-  color: rgba(0,0,0,0);
-  background: #000;
+.site-header {
+  background: linear-gradient(to left, #675a55 0%, #675a55 5%, #7f7774 50%, #675a55 95%, #675a55 100%);
+  box-shadow: 0 3px 10px 0 rgba(0,0,0,.5);
+}
+
+.site-branding, .site-description {
+  font-size: 0;
+  margin: 0;
+  padding: 0;
+}
+.site-branding {
+  padding: 40px 0;
+}
+
+.main-navigation {
+  color: #FFF;
+  display: block;
+  float: none;
+  text-align: right;
+  ul {
+    color: inherit;
+    display: inline-block;
+    margin: 88px 0 40px;
+    vertical-align: middle;
+    li {
+      color: inherit;
+      display: inline-block;
+      float: none;
+      padding: 5px 14px;
+      a {
+        color: inherit;
+        font-family: $fnt_swiss;
+        @include font-size(1.1);
+        font-weight: 700;
+        text-transform: uppercase;
+      }
+    }
+  }
+}
+
+.site-footer {
+  background: #FFFFFF;
+  padding: 25px 0;
+  text-align: center;
+  .social-icons {
+    background: #42413E;
+    border-radius: 3px;
+    color: #FFF;
+    display: inline-block;
+    @include font-size(1.2);
+    height: 1.666em;
+    line-height: 1.666em;
+    margin: 0 4px;
+    position: relative;
+    vertical-align: middle;
+    width: 1.666em;
+    &:hover {
+      text-decoration: none;
+    }
+    i {
+      left: 50%;
+      position: absolute;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+}
+
+.menu-footer-container {
+  display: inline-block;
+  vertical-align: middle;
+  .menu {
+    color: #42413e;
+    display: inline-block;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: auto;
+    li {
+      border-right: solid 1px currentColor;
+      color: inherit;
+      display: inline-block;
+      padding: 0 12px;
+      &:last-of-type {
+        border-right: none;
+      }
+      a {
+        color: inherit;
+        font-family: $fnt_calibri;
+        @include font-size(1.2);
+        text-transform: uppercase;
+        &:hover {
+          text-decoration: none;
+        }
+      }
+    }
+  }
 }
